--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "Name": "Linux - ludal - sveltekit-netcore-identity - 08b71de5",
+  "Name": "sveltekit-netcore-bff",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
