--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sveltekit-netcore-identity",
+  "name": "sveltekit-netcore-bff",
   "private": true,
   "version": "0.0.1",
   "type": "module",
